Fix long comments without spaces not wrapping and pushing buttons to go off-screen.
#4331 (issue #2)

--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -57,6 +57,8 @@
 
 .comment__message {
   white-space: pre-line;
+  word-wrap: break-word;
+  word-break: break-all;
   margin-top: var(--spacing-s);
 }
 
